changed padding of main container so it has room for navbar. Not responsive at the moment and will need to be fixed later

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,6 @@
 .container {
   height: 100%;
+  padding-top: 60px;
 }
 
 html, body {
